[tool.poetry]
name = "vv_api"
version = "1.0.0"
description = "Generate Master Vessel Schedule based on carrier vessel voyage"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
fastapi = "0.110.2"
uvicorn = "0.29.0"
pydantic = "2.7.1"
oracledb = "2.1.2"
pydantic-settings = "2.2.1"

[tool.poetry.group.dev.dependencies]
pydantic = "2.7.1"
uvicorn = "0.29.0"
fastapi = "0.110.2"
oracledb = "2.1.2"
pydantic-settings = "2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
